[FIX] - About Page - On popup scroll blocking removed and z-index adjusted

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body::after {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, .35);
-  z-index: 10000;
+  z-index: 1000;
   opacity: 0;
   visibility: hidden;
   transition: all .6s ease;
@@ -143,7 +143,7 @@ body.overlay::after {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 10000;
   color: white;
   background-color: #111c4e;
   padding: 2vw 0;
@@ -2832,7 +2832,7 @@ body.overlay::after {
   background-position: bottom right;
   padding: 1.7vw 1.7vw 2.5vw 1.7vw;
   transition: all .8s ease;
-  z-index: 11000;
+  z-index: 1100;
 }
 
 .about-team .person.show .secondary-info {
